--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,8 +42,10 @@
       "last 1 safari version"
     ]
   },
+  "homepage": "https://datrinon.github.io/react-shopping-cart",
   "devDependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "gh-pages": "^3.2.3",
     "react-router-dom": "^5.3.0"
   }
 }
